--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-    "name": "team-profile-generator",
-    "version": "1.0.0",
-    "description": "Unit 10 homework",
-    "main": "app.js",
-    "directories": {
-      "lib": "lib",
-      "test": "jest"
-    },
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/awarmath/Team-Profile-Generator.git"
-    },
-    "author": "",
-    "license": "MIT",
-    "bugs": {
-      "url": "https://github.com/awarmath/Team-Profile-Generator/issues"
-    },
-    "homepage": "https://github.com/awarmath/Team-Profile-Generator#readme",
-    "dependencies": {
-      "inquirer": "^7.0.0",
-      "jest": "^24.9.0"
-    }
-  }
+  "name": "team-profile-generator",
+  "version": "1.0.0",
+  "description": "Week 10 Project",
+  "main": "app.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "dependencies": {
+    "inquirer": "^7.3.3",
+    "jest": "^26.6.3"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "jest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/awarmath/Team-Profile-Generator.git"
+  },
+  "author": "awarmath",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/awarmath/Team-Profile-Generator/issues"
+  },
+  "homepage": "https://github.com/awarmath/Team-Profile-Generator#readme"
+}
